--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 homepage: "https://www.mparticle.com"
-documentation: "https://docs.mparticle.com/developers/"
+documentation: "https://docs.mparticle.com/developers/sdk/web/gtm-templates/#commerce-custom-and-screen-view-event-templates"
 versions:
   - sha: c439a0486abe23402c5e7689a756dfd8a773aabd
     changeNotes: Initial Release
